# ChangeLog for sci-visualization/gnuplot
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.101 2009/04/01 20:26:54 ulm Exp $

  01 Apr 2009; Ulrich Mueller <ulm@gentoo.org>
  +files/gnuplot-4.2.5-configure-pkgconfig.patch, gnuplot-4.2.5.ebuild:
  Add proper texlive dependency for ifxetex.sty. Fix USE="wxwindows -lua"
  build issue, bug 233475 comment #9; thanks to Ottxor <kleiner_otti@gmx.de>.

*gnuplot-4.2.5 (31 Mar 2009)

  31 Mar 2009; Ulrich Mueller <ulm@gentoo.org>
  +files/gnuplot-gentoo-version.patch, +gnuplot-4.2.5.ebuild:
  Version bump. Add support for PGF/TikZ terminal with USE=lua, bug 233475;
  thanks to Thomas Fischer <fischer@unix-ag.uni-kl.de>. Add Gentoo version
  identification and contact information, in order to fulfil provisions 2
  through 4 of the gnuplot licence for redistribution of binaries. Remove
  the built_with_use test for media-libs/gd from src_unpack and replace it
  by a USE dependency; therefore bump EAPI to 2. latex_rehash is not needed
  any more, replace it by texmf-update.

  27 Mar 2009; Jeroen Roovers <jer@gentoo.org> gnuplot-4.2.4-r1.ebuild:
  Stable for HPPA (bug #262327).

  25 Mar 2009; Raúl Porcel <armin76@gentoo.org> gnuplot-4.2.4-r1.ebuild:
  ia64/s390 stable wrt #262327

  19 Mar 2009; Brent Baude <ranger@gentoo.org> gnuplot-4.2.4-r1.ebuild:
  stable ppc, bug 262327

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  gnuplot-4.2.4-r1.ebuild:
  Stable on alpha, bug #262327

  15 Mar 2009; Markus Meier <maekke@gentoo.org> gnuplot-4.2.4-r1.ebuild:
  amd64/x86 stable, bug #262327

  15 Mar 2009; Brent Baude <ranger@gentoo.org> gnuplot-4.2.4-r1.ebuild:
  stable ppc64, bug 262327

  12 Mar 2009; Ferris McCormick <fmccor@gentoo.org> gnuplot-4.2.4-r1.ebuild:
  Sparc stable, Bug #262327.

  12 Mar 2009; Christian Faulhammer <fauli@gentoo.org> metadata.xml:
  remove myself as maintainer
