@@ -4,14 +4,12 @@ AUX gnuplot-4.2.3-app-defaults.patch 2097 RMD160 d0764b54424cfec60b22e498b862480
 AUX gnuplot-4.2.3-disable-texhash.patch 677 RMD160 b299c7425e735ebad6afa1e2d154190fb2f3fdf8 SHA1 6e5f25a0283b2dd887738d8caee7c92d1905b1cc SHA256 af25fded8998eb48ea0b89f9ce0d5322721088c2b69a360ec7928a7f6115873e
 AUX gnuplot-4.2.5-configure-pkgconfig.patch 484 RMD160 d1d8031382b8062c393fa430eb69f74f68d93c64 SHA1 e749dbd1cf8047a6274182cc0e2317d3f1b09a2e SHA256 58d0c0106337c5f48ad2f75671566556c055eb58ee016c4a125dbc6fd434d1b6
 AUX gnuplot-gentoo-version.patch 2079 RMD160 394bee0853cb9343864342a2a11a4453af30e22e SHA1 337c0b3b329965c01d75decf49a7ef678e3d46a9 SHA256 c6c1b8a6ccc9d8aeaa12d178f5e91653d4f7f5f9c49eae1feb1ec3f7267670e1
-DIST gnuplot-4.2.2.tar.gz 2832174 RMD160 7364d283718d89c05652d7c25a841154caa2efd8 SHA1 991db8024f04e8cad300804bc2661e358fdcf348 SHA256 756f8a058f2743d0ca739a14bd43cda40d6fd9cc14bb50f4d30d92d538478a91
 DIST gnuplot-4.2.3.tar.gz 2840611 RMD160 b4692db884c9da2f0d160f33f53c3d2aba65f36e SHA1 9f6239ef69ac5a6d68f40dc797f8a0b35b80f491 SHA256 4aae09bf99ab2642308b0042eb18b75bc18ff33969a7431bba60b09cc2f600f4
 DIST gnuplot-4.2.4.tar.gz 2904358 RMD160 88acf7561a74116aece627f9b5e41e0726daee75 SHA1 4226b959493a37bc5a1f40a3b165ffd9e1b9d202 SHA256 2a20701410a21307c404a9d10ad9fdf699bb92fa0a919797213208d80b080913
 DIST gnuplot-4.2.5-lua-term.patch.bz2 26660 RMD160 981db04276ce51ece9b95076856b9811de872e3d SHA1 845fffa290d66e51ce5924d020a1d9b3bf354986 SHA256 32f39b4eb14e41f22fc911c73adf740e38af0819315ee102449ad4e572ab1b7f
 DIST gnuplot-4.2.5.tar.gz 2873303 RMD160 79ab74627d66c2eff6d69276c1556acca89ec6dd SHA1 e7ad6afc1ca7b39a512a18f2dc6f2bcda9bf9128 SHA256 89477ede06ca5a6cc814e123babadeda75bc52d89b078b92b79fba957caf11f8
-EBUILD gnuplot-4.2.2-r1.ebuild 5375 RMD160 eb03058bb65cda4e48d72dfd16fdfd3b348a27d0 SHA1 2604b1f773af9ecf6f7275f5034d8ceb2d0b8c9b SHA256 28e3ea92d0ac0f573b25741e3dc37c5450b884a92117d5838ba1535e5daf659d
 EBUILD gnuplot-4.2.3-r2.ebuild 5468 RMD160 8409aad9f5071a3a7679288f8c451a179ec35cd9 SHA1 81f4cae726857e4527586ba64750e054ac9654da SHA256 d12235df804a227a207812913d6ed47c17976fbd19b3e638c9595123ee3b4158
 EBUILD gnuplot-4.2.4-r1.ebuild 5402 RMD160 9ff6a563490ef84a7eb63d518f122725be0c260d SHA1 55ce30cdfc5d6e0b7ab6115ce93a07d83c6d02ef SHA256 ee30cfe1f449556723d40735c0cf04247858dc94b633ebe23907d50b8ab3be9a
-EBUILD gnuplot-4.2.5.ebuild 5853 RMD160 a05d23f8b5e8deea62a11bdedefb65d47e962514 SHA1 717743b7645de337b77315d434a831d4b280efcb SHA256 4b9a2b1238391bd1fbfc2823e0e89b5bf2be29484ace59cb0eddb87498107b7e
-MISC ChangeLog 21427 RMD160 1e7e1c80242923790f4567c62caae730ca68e36a SHA1 7f1f042d0642a1a6b0871879ea95f0add617becc SHA256 5558b0e7d1627c7dcd07222fe9563b1bf5f49cfe03b0183fd65bc4e84d19b391
+EBUILD gnuplot-4.2.5.ebuild 5814 RMD160 69c8a5578f053f5e770b326545d76df8fc222a3f SHA1 22c8af3a7ee8c400d3a868b0d4ed6b91e937e99b SHA256 263e6fad792f2c6c72008fc48146dc7da345602ded319c113fb46db1b65b15fe
+MISC ChangeLog 21582 RMD160 fe2504e094f789125c0a2f49fb1fbd742f780f5a SHA1 3f552af202e914c7835c24c9e4f1279b7e974bbf SHA256 b26700849c15d6722b2625c099e668f19496e67fe150505fbd3f015fa447dd1e
 MISC metadata.xml 215 RMD160 ec20f35cba71ed779c37faff72797d5162aca3ab SHA1 365b4e7ba49bbe889a7755c256161fcbf1bfd6cd SHA256 3c0405bae8c54a7aa4c92bbb44941fc4243a8474a6209063fa6f24e1c85e8bb6
